k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maybe
  labels:
    name: maybe
    app: maybe
    environment: production
